--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<title>Network Nuts Docker Deep Dive</title>
+<title>Docker Deep Dive</title>
 <body>
-<h1>Docker Deep Dive Training</h1>
+<h1>Docker Training</h1>
 <h2>A containerized webserver</h2>
-<h3>- #networknuts
+<h3>- #bnsbazaar
 </body>
 </html>
