--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Docker Deep Dive</title>
+<title>Docker Deep Dive presented by Bhaskar</title>
 <body>
 <h1>Docker Training</h1>
 <h2>A containerized webserver</h2>
